# rag-n-roll

./: .gitignore  Makefile  README.md  docker-compose.yaml  notes.md  pyproject.toml
infrastructure/opentofu/: main.tf  outputs.tf  variables.tf
k8s/: configmap.yml  ingress.yml
k8s/base/: kustomization.yaml  namespace.yml
k8s/base/gateway/: deployment.yml
k8s/base/ingestion/: deployment.yml
k8s/base/ollama/: pvc.yml  service.yml
k8s/base/qdrant/: pvc.yml  service.yml
k8s/gateway/: service.yml
k8s/ingestion/: service.yml
k8s/ollama/: deployment.yml  service.yml
k8s/overlays/aks/: kustomization.yml  resources.yml
k8s/qdrant/: deployment.yml  service.yml
k8s/query/: deployment.yml  service.yml
services/gateway/: Dockerfile  Makefile  pyproject.toml
services/gateway/src/gateway/app/: config.py  main.py
services/gateway/src/gateway/static/: app.js  index.html  style.css
services/ingestion/: Dockerfile  Makefile  pyproject.toml
services/ingestion/src/ingestion/app/: config.py  main.py  pipeline.py
services/query/: Dockerfile  Makefile  pyproject.toml
services/query/src/query/app/: config.py  main.py  prompts.py  rag.py
src/doc_assist/: __init__.py
