[project]
name = "doc-assist"
version = "0.1.0"
description = "An example RAG Project"
readme = "README.md"
authors = [
    { name = "Zaloog", email = "gramslars@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
doc-assist = "doc_assist:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
